# seleqt

./: README.md  pyproject.toml
seleqt/: __init__.py  selection.py  stats.py
